bugs.txt
Bugs

Error ID: 1
Description: Memory leak error when starting new game.
Replicate error steps: Start program e.g, main.exe or main (on linux for error)
Date escalated: 5th August 2024
Error message: Error in terminal output only appears while running program on linux



Error ID: 2
Description: Github Actions CI/CD error with Windows vm failing to compile code. Issue could be related to import for boost within WebserverClient.hpp
Date escalated: 5th August 2024
Github actions error message: 

Run g++ -fdiagnostics-color=always -ID:\a\BubbleUp\BubbleUp/headers -ID:/a/_temp/msys64/mingw64/include  `
In file included from D:/a/_temp/msys64/mingw64/include/winerror.h:4739,
                 from D:/a/_temp/msys64/mingw64/include/winbase.h:2817,
                 from D:/a/_temp/msys64/mingw64/include/windows.h:70,
                 from D:/a/_temp/msys64/mingw64/include/winsock2.h:23,
                 from D:\a\BubbleUp\BubbleUp/headers/WebserverClient.hpp:17,
                 from D:/a/BubbleUp/BubbleUp/headers/entities/Bot.hpp:14,
                 from D:/a/BubbleUp/BubbleUp/headers/globals.hpp:41,
                 from D:\a\BubbleUp\BubbleUp/tests/testcases.cpp:18:
D:/a/_temp/msys64/mingw64/include/fltwinerror.h:12: warning: "FACILITY_USERMODE_FILTER_MANAGER" redefined
   12 | #define FACILITY_USERMODE_FILTER_MANAGER 0x1f
      | 
D:/a/_temp/msys64/mingw64/include/winerror.h:38: note: this is the location of the previous definition
   38 | #define FACILITY_USERMODE_FILTER_MANAGER 31
      | 
In file included from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/ext/string_conversions.h:41,
                 from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/bits/basic_string.h:3960,
                 from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/string:53,
                 from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/bits/locale_classes.h:40,
                 from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/bits/ios_base.h:41,
                 from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/ios:42,
                 from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/ostream:38,
                 from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/iostream:39,
                 from D:\a\BubbleUp\BubbleUp/tests/testcases.cpp:10:
C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/cstdlib:137:11: error: 'at_quick_exit' has not been declared in '::'
  137 |   using ::at_quick_exit;
      |           ^~~~~~~~~~~~~
C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/cstdlib:160:11: error: 'quick_exit' has not been declared in '::'
  160 |   using ::quick_exit;
      |           ^~~~~~~~~~
In file included from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/bits/chrono.h:40,
                 from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/chrono:39,
                 from D:\a\BubbleUp\BubbleUp/tests/testcases.cpp:13:
C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/ctime:80:11: error: 'timespec_get' has not been declared in '::'
   80 |   using ::timespec_get;
      |           ^~~~~~~~~~~~
In file included from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/bits/chrono.h:40,
                 from C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/chrono:39,
                 from D:\a\BubbleUp\BubbleUp/src/DebugLogging.cpp:9:
C:/mingw64/lib/gcc/x86_64-w64-mingw32/12.2.0/include/c++/ctime:80:11: error: 'timespec_get' has not been declared in '::'
   80 |   using ::timespec_get;
      |           ^~~~~~~~~~~~

